--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,30 +12,33 @@ on:
         default: 'v1.0.0'
 
 jobs:
-  # the workflow can contain other jobs, such as linting, testing, etc.
   release:
     runs-on: ubuntu-latest
     steps:
-      # run git checkout
       - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.TOKEN }}
 
-      # setup go
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
           go-version: 1.21.x
 
-      # Create tag if manually triggered
+      - name: Configure Git
+        if: github.event_name == 'workflow_dispatch'
+        run: |
+          git config --global user.name 'GitHub Action'
+          git config --global user.email 'action@github.com'
+          git remote set-url origin https://${{ secrets.TOKEN }}@github.com/cploutarchou/swarmforge.git
+
       - name: Create tag if manually triggered
         if: github.event_name == 'workflow_dispatch'
         run: |
           git tag ${{ github.event.inputs.version }}
           git push origin ${{ github.event.inputs.version }}
 
-      # run goreleaser
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
         with:
